syntax="proto3";

// Network gRPC service
package networkservice;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/sriramy/vf-operator/pkg/api/network;networkservice";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        version: "1.0";
    };
    external_docs: {
        url: "github.com/sriramy/vf-operator";
        description: "VF operator";
    }
    schemes: HTTP;
    schemes: HTTPS;
    produces: "application/json";
    produces: "application/x-ndjson";
};

service ResourceService {
    rpc CreateResourceConfig (ResourceConfig) returns (Resource) {
        option (google.api.http) = {
            post: "/api/v1/config/resources"
            body: "*"
        };
    }

    rpc DeleteResourceConfig (ResourceName) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/v1/config/resources/{name}"
        };
    }

    rpc GetAllResourceConfigs(google.protobuf.Empty) returns (ResourceConfigs) {
        option (google.api.http) = {
            get: "/api/v1/config/resources"
        };
    }

    rpc GetResourceConfig (ResourceName) returns (ResourceConfig) {
        option (google.api.http) = {
            get: "/api/v1/config/resources/{name}"
        };
    }

    rpc GetAllResources(google.protobuf.Empty) returns (Resources) {
        option (google.api.http) = {
            get: "/api/v1/resources"
        };
    }

    rpc GetResource(ResourceName) returns (Resource) {
        option (google.api.http) = {
            get: "/api/v1/resources/{name}"
        };
    }
}

service NetworkAttachmentService {
    rpc CreateNetworkAttachment(NetworkAttachment) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/config/networkattachments"
            body: "*"
        };
    }

    rpc DeleteNetworkAttachment(NetworkAttachmentName) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/v1/config/networkattachments/{name}"
        };
    }

    rpc GetAllNetworkAttachments(google.protobuf.Empty) returns (NetworkAttachments) {
        option (google.api.http) = {
            get: "/api/v1/networkattachments"
        };
    }

    rpc GetNetworkAttachment(NetworkAttachmentName) returns (NetworkAttachment) {
        option (google.api.http) = {
            get: "/api/v1/networkattachments/{name}"
        };
    }
}

message ResourceName {
    string name = 1;
}

message NicSelector {
    repeated string vendors = 1;
    repeated string drivers = 2;
    repeated string devices = 3;
    repeated string pfNames = 4;
}

message ResourceConfig {
    string name = 1;
    uint32 mtu = 2;
    uint32 numVfs = 3;
    bool needVhostNet = 4;
    NicSelector nicSelector = 5;
    string deviceType = 6;
}

message ResourceConfigs {
    repeated ResourceConfig resourceConfigs = 1;
}

message VFResourceStatus {
    string name = 1;
    string mac = 2;
    string vendor = 3;
    string driver = 4;
    string device = 5;
}

message ResourceStatus {
    string name = 1;
    uint32 mtu = 2;
    uint32 numVfs = 3;
    string mac = 4;
    string vendor = 5;
    string driver = 6;
    string device = 7;
    repeated VFResourceStatus vfs = 8;
}

message ResourceSpec {
    string name = 1;
    uint32 mtu = 2;
    uint32 numVfs = 3;
    bool needVhostNet = 4;
    repeated string devices = 5;
    string deviceType = 6;
}

message Resource {
    ResourceSpec spec = 1;              // resource configuration spec
    repeated ResourceStatus status = 2; // discovered status corresponding to the spec
}

message Resources {
    repeated Resource resources = 1;
}

message NetworkAttachmentName {
    string name = 1;
}

message NetworkAttachment {
    string name = 1;
    string resourceName = 2;
    google.protobuf.Struct config = 3;
}

message NetworkAttachments {
    repeated NetworkAttachment networkattachments = 1;
}

message InitialConfiguration {
    repeated ResourceConfig resourceConfigs = 1;        // list of resource configurations
    repeated NetworkAttachment networkattachments = 2;  // list of network attachments
}
